--- a/contact.css
+++ b/contact.css
@@ -41,7 +41,7 @@ form .txt-field {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-  button[type="submit"] {
+  input[type="submit"] {
   width: 45%;
   height: 40px;
   border: 1px solid black;
@@ -77,7 +77,7 @@ form .txt-field {
     color: white;
     padding: 0 5px;
   }
-  input[type="submit"] {
+   [type="submit"] {
     width: 100%;
     height: 40px;
 
