--- a/contact.css
+++ b/contact.css
@@ -50,6 +50,9 @@ form .txt-field {
 
   color: white;
 }
+input[type="submit"]:hover {
+  cursor: pointer;
+}
 
 @media (max-width: 669px) {
   .contact-sec {
@@ -77,7 +80,7 @@ form .txt-field {
     color: white;
     padding: 0 5px;
   }
-   [type="submit"] {
+   input[type="submit"] {
     width: 100%;
     height: 40px;
 
